# solovay-kitaev-simulation

./: README.md
code/c++/: .gitignore  CMakeLists.txt
code/c++/src/: error_measurement.cpp  gate_generator.cpp  gate_generator.h  state_visualization.cpp
code/julia/: error_measurement.jl  log-errors.txt  unitary_repr.jl
code/python/: show_julia_plot.py  state_vis.py
report/: report.tex
